--- a/landing-page/form.css
+++ b/landing-page/form.css
@@ -110,3 +110,115 @@ input {
   align-items: center;
   gap: 8px;
 }
+
+@media (max-width: 999px) {
+  /* form container */
+  .customer-signup-form-container,
+  .admin-signup-form-container {
+    position: absolute;
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    flex-direction: column;
+    background-color: #6c4e31;
+    gap: 20px;
+    height: 480px;
+    width: 350px;
+    top: 25%;
+    border-radius: 20px;
+    display: none;
+  }
+
+  .customer-signup-form-container p,
+  .admin-signup-form-container p {
+    font-size: 32px;
+    font-weight: 600;
+    color: #ffeac5;
+    margin-top: 28px;
+    margin-bottom: 24px;
+    text-align: center;
+  }
+
+  .customer-sign-up,
+  .admin-sign-up {
+    margin-top: 12px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 20px;
+    color: #ffeac5;
+  }
+
+  .last-name,
+  .first-name,
+  .email,
+  .password,
+  .repeat-password {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 4px;
+  }
+
+  input {
+    padding: 2px 20px 2px 2px;
+    color: #603f26;
+    font-size: 12px;
+    border-radius: 4px;
+    border: 0px;
+    background-color: #ffeac5;
+  }
+
+  .sign-up-button,
+  .log-in-button {
+    padding: 4px 12px;
+    font-size: 16px;
+    background-color: #ffdbb5;
+    cursor: pointer;
+    font-weight: bold;
+    margin-top: 8px;
+  }
+
+  label {
+    font-size: 14px;
+  }
+
+  .customer-login-form-container,
+  .admin-login-form-container {
+    position: absolute;
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    flex-direction: column;
+    background-color: #6c4e31;
+    gap: 20px;
+    height: 330px;
+    width: 350px;
+    top: 30%;
+    border-radius: 20px;
+    display: none;
+  }
+
+  .customer-login-form-container p,
+  .admin-login-form-container p {
+    font-size: 32px;
+    font-weight: 600;
+    color: #ffeac5;
+    margin-top: 40px;
+    margin-bottom: 28px;
+    text-align: center;
+  }
+
+  .customer-log-in,
+  .admin-log-in {
+    margin-top: 16px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 20px;
+    color: #ffeac5;
+  }
+}
