--- a/admin_panel/assets/css/style.css
+++ b/admin_panel/assets/css/style.css
@@ -1,135 +1,204 @@
-@import url('https://fonts.googleapis.com/css?family=Work+Sans:400,500,600,700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap");
 * {
-    margin: 0;
-    padding: 0;
-    font-family: 'Work Sans', sans-serif;
-    font-size: 18px;
+  margin: 0;
+  padding: 0;
+  font-family: "Playfair Display", serif;
+  font-size: 18px;
 }
 
-.user-cart span{
-    background-color:red; 
-    padding-right:3px; 
-    padding-left:3px;  
-    border-radius:10px; 
-    font-size:18px;
-    margin-left:-1.2rem;
+/* for scroll bar */
+/* width */
+::-webkit-scrollbar {
+  width: 12px;
 }
+
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 4px #6c4e31;
+  border-radius: 8px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #6c4e31;
+  border-radius: 8px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #603f26;
+}
+
+/* .user-cart span {
+  background-color: red;
+  padding-right: 3px;
+  padding-left: 3px;
+  border-radius: 10px;
+  font-size: 18px;
+  margin-left: -1.2rem;
+} */
 
 /*********** admin dashboard styling **********/
-  .card{
-      background-color: #3B3131;
-      padding:20px;
-      margin: 10px;
-      border-radius: 10px;
-      box-shadow: 8px 5px 5px #3B3131;
-  }
+.card {
+  padding: 40px 28px;
+  margin: 10px;
+  border-radius: 60px;
+  box-shadow: 8px 5px 5px #603f26;
+}
 
 /************************** for sidebar ***********************************/
 
-  /* The sidebar menu */
-  .sidebar {
-      height: 100%; /* 100% Full-height */
-      width: 0; /* 0 width - change this with JavaScript */
-      position: fixed; /* Stay in place */
-      z-index: 1; /* Stay on top */
-      top: 0;
-      left: 0;
-      background-color: #3B3131; /* Black*/
-      overflow-x: hidden; /* Disable horizontal scroll */
-      padding-top: 60px; /* Place content 60px from the top */
-      transition: 0.5s; /* 0.5 second transition effect to slide in the sidebar */
-    }
-    
-    /* The sidebar links */
-    .sidebar a {
-      padding: 8px 8px 8px 32px;
-      text-decoration: none;
-      font-size: 22px;
-      color: #fff;
-      display: block;
-      transition: 0.3s;
-    }
-    
-    .sidebar .side-header{
-          margin-left: 30px;
-          margin-bottom: 8px;
-          color: #fff;
-      }
+/* The sidebar menu */
+.sidebar {
+  height: 100%; /* 100% Full-height */
+  width: 250px; /* 0 width - change this with JavaScript */
+  position: absolute; /* Stay in place */
+  z-index: 1; /* Stay on top */
+  top: 0;
+  left: 0;
+  /* overflow-x: hidden; Disable horizontal scroll */
+  padding-top: 60px; /* Place content 60px from the top */
+  transition: 0.5s; /* 0.5 second transition effect to slide in the sidebar */
+  display: none;
+}
 
-    /* When you mouse over the navigation links, change their color */
-    .sidebar a:hover {
-      background-color: #584e46;
-    }
-    
-    /* Position and style the close button (top right corner) */
-    .sidebar .closebtn {
-      position: absolute;
-      top: 0;
-      right: 2px;
-      font-size: 34px;
-      margin-left: 50px;
-    }
-    
-    /* The button used to open the sidebar */
-    .openbtn {
-      font-size: 20px;
-      cursor: pointer;
-      padding: 10px 15px;
-      border: none;
-      color: #fff;
-      background-color:#584e46;
-    }
-    
-    .openbtn:hover {
-      color: #ECDAC9;
-    }
-    
-    /* Style page content - use this if you want to push the page content to the right when you open the side navigation */
-    #main {
-      transition: margin-left .5s; /* If you want a transition effect */
-      padding: 20px;
-    }
-    
-    /* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
-    @media screen and (max-height: 450px) {
-      .sidebar {padding-top: 15px;}
-      .sidebar a {font-size: 18px;}
-    }
+/* The sidebar links */
+.sidebar a {
+  padding: 8px 8px 8px 32px;
+  text-decoration: none;
+  font-size: 22px;
+  color: #ffdbb5;
+  display: block;
+  transition: 0.3s;
+}
+
+.side-header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #ffdbb5;
+  flex-direction: column;
+  gap: 8px;
+}
+/* 
+.sidebar .side-header {
+  margin-left: 30px;
+  margin-bottom: 8px;
+} */
+
+/* When you mouse over the navigation links, change their color */
+.sidebar a:hover {
+  background-color: #603f26;
+}
+
+/* Position and style the close button (top right corner) */
+.sidebar .closebtn {
+  position: absolute;
+  top: 12px;
+  right: 12px;
+  font-size: 34px;
+  margin-left: 50px;
+  padding: 0px 18px;
+  border-radius: 28px;
+}
+
+/* The button used to open the sidebar */
+.openbtn {
+  font-size: 20px;
+  cursor: pointer;
+  padding: 10px 15px;
+  border: none;
+  color: #fff;
+  background-color: #584e46;
+}
+
+.openbtn:hover {
+  color: #ecdac9;
+}
+
+/* Style page content - use this if you want to push the page content to the right when you open the side navigation */
+#main {
+  transition: margin-left 0.5s; /* If you want a transition effect */
+  padding: 20px 0px 0px 20px;
+}
+
+/* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
+@media screen and (max-height: 450px) {
+  .sidebar {
+    padding-top: 15px;
+  }
+  .sidebar a {
+    font-size: 18px;
+  }
+}
 
 /************************** product table styling *********************************/
 
-  table {
-    width: 100%;
-    border-collapse: collapse;
-    border-spacing: 0;
-    box-shadow: 0 2px 15px rgba(64, 64, 64, .7);
-    border-radius: 12px 12px 0 0;
-    margin-bottom: 50px;
-  }
+.section-title {
+  font-size: 40px;
+  color: #603f26;
+  font-weight: 500;
+  margin-bottom: 8px;
+}
 
-  td,
-  th {
-    padding: 10px 16px;
-    text-align: center;
-  }
+.edit-title {
+  padding-right: 40px;
+}
 
-  th {
-    background-color: #584e46;
-    color: #fafafa;
-    font-family: 'Open Sans', Sans-serif;
-    font-weight: bold;
-  }
+.modal-title {
+  color: #603f26;
+}
 
-  tr {
-    width: 100%;
-    background-color: #fafafa;
-    font-family: 'Montserrat', sans-serif;
-  }
+.modal-content {
+  background-color: #ffeac5;
+}
 
-  tr:nth-child(even) {
-    background-color: #eeeeee;
-  }
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+  border-radius: 12px 12px 0 0;
+  margin-bottom: 50px;
+}
 
+.scrollable-table {
+  max-height: 450px;
+  height: auto;
+  width: auto;
+  overflow-y: auto;
+  margin-bottom: 16px;
+}
+
+.category-table,
+.size-table,
+.prod-size-table {
+  width: 600px;
+}
+
+td,
+th {
+  padding: 10px 16px;
+  text-align: center;
+}
+
+th {
+  background-color: #603f26;
+  color: #ffeac5;
+  font-weight: bold;
+  position: sticky;
+  top: 0;
+}
+
+tr:nth-child(odd) {
+  width: 100%;
+  background-color: rgba(255, 219, 181, 0.7);
+  color: #603f26;
+}
+
+tr:nth-child(even) {
+  width: 100%;
+  background-color: rgba(255, 234, 197, 0.7);
+  color: #603f26;
+}
 
 /************************ login and sign up styling  ******************************/
 
@@ -145,13 +214,15 @@
   -webkit-user-select: none;
   user-select: none;
   cursor: default;
+  background-color: #603f26;
+  color: #ffdbb5;
 }
 
 /*
 * Card component
 */
-.card-account{
-  background-color: #ECDAC9;
+.card-account {
+  background-color: #ecdac9;
   /* just in case there no content*/
   padding: 20px 25px 30px;
   margin: 0 auto 25px;
@@ -208,9 +279,9 @@
   font-size: 16px;
 }
 
-.form-signin input[type=email],
-.form-signin input[type=password],
-.form-signin input[type=text],
+.form-signin input[type="email"],
+.form-signin input[type="password"],
+.form-signin input[type="text"],
 .form-signin button {
   width: 100%;
   display: block;
@@ -225,12 +296,11 @@
 .form-signin .form-control:focus {
   border-color: #ab9787;
   outline: 0;
-  -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px #8a7a6d;
-  box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px #8a7a6d;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px #8a7a6d;
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px #8a7a6d;
 }
 
 .btn.btn-signin {
-  
   background-color: #584e46;
   padding: 2px;
   font-weight: 700;
@@ -252,7 +322,6 @@
   background-color: #a56a39;
 }
 
-
 .box {
   position: relative;
   background-color: #000;
@@ -263,13 +332,13 @@
   display: block;
   max-width: 100%;
   height: auto;
-  transition: .5s ease;
+  transition: 0.5s ease;
   backface-visibility: hidden;
   object-fit: contain;
 }
 
 .middle {
-  transition: .5s ease;
+  transition: 0.5s ease;
   opacity: 0;
   position: absolute;
   top: 50%;
@@ -296,26 +365,25 @@
 }
 
 /* *******************   cart to login icon styling   ********************* */
-.cart-login-btn{
-  margin:5px;
+.cart-login-btn {
+  margin: 5px;
   border-style: outset;
 }
-.cart-login-btn a i{
+.cart-login-btn a i {
   padding: 10px;
-  font-size:30px; 
-  color:#584e46;              
+  font-size: 30px;
+  color: #584e46;
 }
-.cart-login-btn a i:hover{  
+.cart-login-btn a i:hover {
   color: grey;
 }
 
-
 /* ****************************   footer  *************************** */
-.footer-hover{
+.footer-hover {
   color: #000;
 }
 
-.footer-hover:hover{
-  color: #ECDAC9;
+.footer-hover:hover {
+  color: #ecdac9;
   text-decoration: none;
 }
