--- a/landing-page/landing-page.css
+++ b/landing-page/landing-page.css
@@ -121,23 +121,23 @@ button {
 
 @keyframes changes {
   0% {
-    background-image: url(/bg-logo-img/bg1.jpg);
+    background-image: url(../bg-logo-img/bg1.jpg);
   }
 
   25% {
-    background-image: url(/bg-logo-img/bg2.jpg);
+    background-image: url(../bg-logo-img/bg2.jpg);
   }
 
   50% {
-    background-image: url(/bg-logo-img/bg3.jpg);
+    background-image: url(../bg-logo-img/bg3.jpg);
   }
 
   75% {
-    background-image: url(/bg-logo-img/bg4.jpg);
+    background-image: url(../bg-logo-img/bg4.jpg);
   }
 
   100% {
-    background-image: url(/bg-logo-img/bg1.jpg);
+    background-image: url(../bg-logo-img/bg1.jpg);
   }
 }
 
