add supplier, customer address, shipping address on each order, compute total amount of orders, and fix some ui in admin panel

--- a/admin_panel/assets/css/admin.css
+++ b/admin_panel/assets/css/admin.css
@@ -57,3 +57,16 @@ body {
   display: block;
   width: 250px;
 }
+
+.order-details-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.total-amount {
+  color: #603f26;
+  font-size: 28px;
+  font-weight: bold;
+}
