--- a/admin_panel/assets/css/admin.css
+++ b/admin_panel/assets/css/admin.css
@@ -26,7 +26,7 @@ body {
   background-color: #603f26;
   font-size: 100px;
   display: flex;
-  justify-content: start;
+  justify-content: space-between;
   align-items: center;
   height: 80px;
   gap: 100px;
@@ -42,6 +42,20 @@ body {
   font-weight: bold;
   font-family: "Playfair Display", serif;
   color: #ffeac5;
+}
+
+.logout-icon i {
+  text-decoration: none;
+  font-size: 24px;
+  color: #ffdbb5;
+  display: block;
+  transition: 0.3s;
+  margin-right: 100px;
+  cursor: pointer;
+}
+
+.logout-icon:hover {
+  text-decoration: none;
 }
 
 .openbtn {
@@ -69,4 +83,12 @@ body {
   color: #603f26;
   font-size: 28px;
   font-weight: bold;
+}
+
+.low-stock {
+  background-color: rgb(255, 255, 111) !important;
+}
+
+.out-of-stock {
+  background-color: rgb(240, 111, 111) !important;
 }
