--- a/customer-panel/style.css
+++ b/customer-panel/style.css
@@ -88,6 +88,7 @@ body {
   width: 100%;
   align-items: center;
   justify-items: center;
+  row-gap: 50px;
 }
 
 .card {
@@ -108,4 +109,23 @@ body {
   color: #ffdbb5 !important;
   font-weight: 600 !important;
   border: solid 1px #ffdbb5 !important;
+}
+
+.products-container {
+  margin: 60px 220px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.add-to-cart-btn {
+  padding: 4px 8px !important;
+  font-size: 14px !important;
+  position: absolute !important;
+  bottom: 16px;
+}
+
+.product {
+  position: relative;
 }
