added cart count in cart icon

--- a/customer-panel/style.css
+++ b/customer-panel/style.css
@@ -55,7 +55,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 80px;
+  gap: 150px;
 }
 
 .search-btn,
@@ -125,13 +125,6 @@ body {
   flex-direction: column;
 }
 
-.add-to-cart-btn {
-  padding: 4px 8px !important;
-  font-size: 14px !important;
-  position: absolute !important;
-  bottom: 16px;
-}
-
 .add-to-cart {
   padding: 4px 8px !important;
   font-size: 14px !important;
@@ -140,12 +133,22 @@ body {
   left: 45%;
 }
 
+.add-to-cart-btn {
+  padding: 4px 8px !important;
+  font-size: 14px !important;
+  position: absolute !important;
+}
+
 .view-btn {
   padding: 4px 8px !important;
   font-size: 14px !important;
   position: absolute !important;
   bottom: 16px;
   right: 65%;
+}
+
+.cart-count {
+  cursor: pointer;
 }
 
 .product {
@@ -164,13 +167,12 @@ body {
   align-items: center;
   flex-direction: column;
   margin-top: 40px;
-  margin-bottom: 40px;
+  margin-bottom: 20px;
 }
 
 .cart-container {
   height: 500px;
   width: 1000px;
-  background-color: #603f26;
   border-radius: 20px;
   display: flex;
   justify-content: center;
@@ -183,7 +185,7 @@ body {
 }
 
 #viewProduct,
-#addToCart {
+#viewLogOut {
   top: 200px;
 }
 
@@ -239,4 +241,101 @@ body {
 .size-section {
   position: absolute;
   bottom: 44px;
+}
+
+.cart-table {
+  height: 500px;
+}
+
+.cart-table-container {
+  width: 600px;
+}
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+  border-radius: 12px 12px 0 0;
+  margin-bottom: 50px;
+}
+
+.scrollable-table {
+  max-height: 450px;
+  height: auto;
+  width: auto;
+  overflow-y: auto;
+  margin-bottom: 16px;
+}
+
+td,
+th {
+  padding: 10px 16px;
+  text-align: center;
+}
+
+th {
+  background-color: #603f26 !important;
+  color: #ffeac5 !important;
+  font-weight: bold;
+  position: sticky;
+  top: 0;
+}
+
+tr:nth-child(odd) {
+  width: 100%;
+  background-color: rgba(255, 219, 181, 0.7) !important;
+  color: #603f26 !important;
+}
+
+tr:nth-child(even) {
+  width: 100%;
+  background-color: rgba(255, 234, 197, 0.7) !important;
+  color: #603f26 !important;
+}
+
+.cart-btn {
+  background-color: #603f26 !important;
+  color: #ffeac5 !important;
+}
+
+.cart-count-container {
+  position: relative;
+  display: inline-block;
+}
+
+.cart-count {
+  position: absolute;
+  top: -10px;
+  right: -10px;
+  background-color: #ffdbb5;
+  color: #603f26;
+  border-radius: 100px;
+  padding: 1px 8px;
+  text-align: center;
+  font-weight: bold;
+}
+
+::-webkit-scrollbar {
+  width: 12px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 4px #6c4e31;
+  border-radius: 8px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #6c4e31;
+  border-radius: 8px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #603f26;
+}
+
+.log-out-warning {
+  font-size: 20px;
+  color: #ffdbb5;
 }
