--- a/customer-panel/style.css
+++ b/customer-panel/style.css
@@ -270,6 +270,7 @@ td,
 th {
   padding: 10px 16px;
   text-align: center;
+  font-weight: bold;
 }
 
 th {
@@ -284,12 +285,14 @@ tr:nth-child(odd) {
   width: 100%;
   background-color: rgba(255, 219, 181, 0.7) !important;
   color: #603f26 !important;
+  font-weight: bold !important;
 }
 
 tr:nth-child(even) {
   width: 100%;
   background-color: rgba(255, 234, 197, 0.7) !important;
   color: #603f26 !important;
+  font-weight: bold !important;
 }
 
 .cart-btn {
