--- a/landing-page/form.css
+++ b/landing-page/form.css
@@ -16,7 +16,8 @@
 }
 
 .customer-signup-form-container p,
-.admin-signup-form-container p {
+.admin-signup-form-container p,
+.verify-email-form-container p {
   font-size: 44px;
   font-weight: 600;
   color: #ffeac5;
@@ -70,6 +71,17 @@
   background: #ffdbb5;
 }
 
+
+.email-verification,
+.verification-code {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 8px;
+    color: #ffeac5;
+}
+
 .last-name,
 .first-name,
 .email,
@@ -92,7 +104,8 @@ input {
 }
 
 .sign-up-button,
-.log-in-button {
+.log-in-button,
+.verify-button {
   padding: 8px 16px;
   font-size: 24px;
   background-color: #ffdbb5;
@@ -102,7 +115,8 @@ input {
 }
 
 .customer-login-form-container,
-.admin-login-form-container {
+.admin-login-form-container,
+.verify-email-form-container {
   position: absolute;
   display: flex;
   justify-content: start;
@@ -118,7 +132,8 @@ input {
 }
 
 .customer-login-form-container p,
-.admin-login-form-container p {
+.admin-login-form-container p,
+.verify-email-form-container p {
   font-size: 44px;
   font-weight: 600;
   color: #ffeac5;
@@ -128,7 +143,8 @@ input {
 }
 
 .customer-log-in,
-.admin-log-in {
+.admin-log-in,
+.email-verification-form {
   margin-top: 12px;
   display: flex;
   justify-content: center;
@@ -148,7 +164,8 @@ input {
 @media (max-width: 999px) {
   /* form container */
   .customer-signup-form-container,
-  .admin-signup-form-container {
+  .admin-signup-form-container,
+  .verify-email-form-container {
     position: absolute;
     display: flex;
     justify-content: start;
@@ -164,7 +181,8 @@ input {
   }
 
   .customer-signup-form-container p,
-  .admin-signup-form-container p {
+  .admin-signup-form-container p,
+  .verify-email-form-container p {
     font-size: 32px;
     font-weight: 600;
     color: #ffeac5;
@@ -207,7 +225,8 @@ input {
   }
 
   .sign-up-button,
-  .log-in-button {
+  .log-in-button,
+  .verify-button {
     padding: 4px 12px;
     font-size: 16px;
     background-color: #ffdbb5;
@@ -221,7 +240,8 @@ input {
   }
 
   .customer-login-form-container,
-  .admin-login-form-container {
+  .admin-login-form-container,
+  .verify-email-form-container {
     position: absolute;
     display: flex;
     justify-content: start;
@@ -237,7 +257,8 @@ input {
   }
 
   .customer-login-form-container p,
-  .admin-login-form-container p {
+  .admin-login-form-container p,
+  .verify-email-form-container p {
     font-size: 32px;
     font-weight: 600;
     color: #ffeac5;
