--- a/customer-panel/style.css
+++ b/customer-panel/style.css
@@ -80,7 +80,8 @@ body {
 }
 
 .title-container,
-.cart-title {
+.cart-title,
+.checkout-title {
   font-weight: bold;
   font-size: 60px;
   color: #603f26;
@@ -161,7 +162,8 @@ body {
   align-items: center;
 }
 
-.cart-section {
+.cart-section,
+.checkout-section {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -341,4 +343,65 @@ tr:nth-child(even) {
 .log-out-warning {
   font-size: 20px;
   color: #ffdbb5;
+}
+
+.order-details-container {
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-direction: row;
+  width: 50%;
+}
+
+.price-container {
+  font-weight: bold;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
+  color: #ffdbb5;
+  margin: 0;
+  background-color: #6c4e31;
+  padding: 20px;
+  border-radius: 10px;
+}
+
+.form-container .form-group {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.form-container .form-group label {
+  font-weight: bold;
+  color: #603f26;
+}
+
+.form-container .form-group input {
+  border: none;
+  background-color: #6c4e31;
+  padding: 2px;
+  border-radius: 8px;
+  color: #ffdbb5;
+}
+
+.form-container form {
+  display: grid;
+  justify-content: center;
+  align-items: center;
+  grid-template-columns: 1fr 1fr 1fr;
+  column-gap: 8px;
+}
+
+.placeorder-btn {
+  background-color: #603f26 !important;
+  color: #ffdbb5 !important;
+  padding: 8px !important;
+  font-size: 16px !important;
+}
+
+.form-control-file {
+  display: block !important;
+  width: 220px !important;
 }
