--- a/customer-panel/style.css
+++ b/customer-panel/style.css
@@ -346,12 +346,12 @@ tr:nth-child(even) {
 }
 
 .order-details-container {
-  margin: 0 auto;
+  margin: 0 auto 32px auto;
   display: flex;
   justify-content: space-around;
   align-items: center;
   flex-direction: row;
-  width: 50%;
+  width: 65%;
 }
 
 .price-container {
